Add person foundation
