# src/contracts/generated/oas/IsekaiObservatory.Admin.v1.yaml
@@ -6,6 +6,7 @@ tags:
   - name: AdminUser
   - name: Authenticate
   - name: Creator
+  - name: Person
   - name: Performer
   - name: SongTag
   - name: Song
@@ -637,6 +638,270 @@ paths:
           description: Server error
       tags:
         - Performer
+      security:
+        - BearerAuth: []
+  /persons:
+    get:
+      operationId: PersonService_listPersons
+      description: 人物一覧取得API
+      parameters: []
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PersonListResponse'
+        '401':
+          description: Access is unauthorized.
+        '403':
+          description: Access is forbidden.
+        '500':
+          description: Server error
+        '503':
+          description: Service unavailable.
+        '504':
+          description: Server error
+      tags:
+        - Person
+      security:
+        - BearerAuth: []
+    post:
+      operationId: PersonService_createPerson
+      description: 人物作成API
+      parameters: []
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PersonCreateResponse'
+        '400':
+          description: The server could not understand the request due to invalid syntax.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: Access is unauthorized.
+        '403':
+          description: Access is forbidden.
+        '422':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationError'
+        '500':
+          description: Server error
+        '503':
+          description: Service unavailable.
+        '504':
+          description: Server error
+      tags:
+        - Person
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PersonCreateRequest'
+      security:
+        - BearerAuth: []
+  /persons/search:
+    get:
+      operationId: PersonService_searchPersons
+      description: 人物検索API
+      parameters:
+        - name: name
+          in: query
+          required: false
+          schema:
+            type: string
+          explode: false
+        - name: sort
+          in: query
+          required: false
+          schema:
+            $ref: '#/components/schemas/PersonSearchSortBy'
+            default: order_no
+          explode: false
+        - name: order
+          in: query
+          required: false
+          schema:
+            $ref: '#/components/schemas/SortOrder'
+            default: asc
+          explode: false
+        - name: page
+          in: query
+          required: false
+          schema:
+            $ref: '#/components/schemas/page'
+            default: 1
+          explode: false
+        - name: per_page
+          in: query
+          required: false
+          schema:
+            $ref: '#/components/schemas/PerPage'
+            default: 50
+          explode: false
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PersonSearchResponse'
+        '401':
+          description: Access is unauthorized.
+        '403':
+          description: Access is forbidden.
+        '500':
+          description: Server error
+        '503':
+          description: Service unavailable.
+        '504':
+          description: Server error
+      tags:
+        - Person
+      security:
+        - BearerAuth: []
+  /persons/{personId}:
+    get:
+      operationId: PersonService_getPerson
+      description: 人物取得API
+      parameters:
+        - name: personId
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/uuid'
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PersonGetResponse'
+        '401':
+          description: Access is unauthorized.
+        '403':
+          description: Access is forbidden.
+        '404':
+          description: The server cannot find the requested resource.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationError'
+        '500':
+          description: Server error
+        '503':
+          description: Service unavailable.
+        '504':
+          description: Server error
+      tags:
+        - Person
+      security:
+        - BearerAuth: []
+    put:
+      operationId: PersonService_updatePerson
+      description: 人物更新API
+      parameters:
+        - name: personId
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/uuid'
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PersonUpdateResponse'
+        '400':
+          description: The server could not understand the request due to invalid syntax.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: Access is unauthorized.
+        '403':
+          description: Access is forbidden.
+        '404':
+          description: The server cannot find the requested resource.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationError'
+        '500':
+          description: Server error
+        '503':
+          description: Service unavailable.
+        '504':
+          description: Server error
+      tags:
+        - Person
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PersonUpdateRequest'
+      security:
+        - BearerAuth: []
+    delete:
+      operationId: PersonService_deletePerson
+      description: 人物削除API
+      parameters:
+        - name: personId
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/uuid'
+      responses:
+        '204':
+          description: 'There is no content to send for this request, but the headers may be useful. '
+        '400':
+          description: The server could not understand the request due to invalid syntax.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: Access is unauthorized.
+        '403':
+          description: Access is forbidden.
+        '422':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationError'
+        '500':
+          description: Server error
+        '503':
+          description: Service unavailable.
+        '504':
+          description: Server error
+      tags:
+        - Person
       security:
         - BearerAuth: []
   /song-tags:
@@ -1483,6 +1748,89 @@ components:
         - read_song
         - write_song
       description: 権限の値
+    Person:
+      type: object
+      required:
+        - personId
+        - name
+        - orderNo
+      properties:
+        personId:
+          $ref: '#/components/schemas/personId'
+        name:
+          $ref: '#/components/schemas/personName'
+        orderNo:
+          $ref: '#/components/schemas/orderNo'
+      examples:
+        - personId: 0cc5f492-22fe-4f38-b702-8b2375bc0254
+          name: ヰ世界情緒
+          orderNo: 10
+    PersonCreateRequest:
+      type: object
+      required:
+        - name
+      properties:
+        name:
+          $ref: '#/components/schemas/personName'
+    PersonCreateResponse:
+      type: object
+      required:
+        - person
+      properties:
+        person:
+          $ref: '#/components/schemas/Person'
+    PersonGetResponse:
+      type: object
+      required:
+        - person
+      properties:
+        person:
+          $ref: '#/components/schemas/Person'
+    PersonListResponse:
+      type: object
+      required:
+        - persons
+      properties:
+        persons:
+          type: array
+          items:
+            $ref: '#/components/schemas/Person'
+    PersonSearchResponse:
+      type: object
+      required:
+        - persons
+        - maxPage
+      properties:
+        persons:
+          type: array
+          items:
+            $ref: '#/components/schemas/Person'
+        maxPage:
+          type: integer
+          format: int32
+    PersonSearchSortBy:
+      type: string
+      enum:
+        - name
+        - order_no
+      description: 人物検索のソート条件
+    PersonUpdateRequest:
+      type: object
+      required:
+        - name
+        - orderNo
+      properties:
+        name:
+          $ref: '#/components/schemas/personName'
+        orderNo:
+          $ref: '#/components/schemas/orderNo'
+    PersonUpdateResponse:
+      type: object
+      required:
+        - person
+      properties:
+        person:
+          $ref: '#/components/schemas/Person'
     RefreshTokenRequest:
       type: object
       required:
@@ -2007,6 +2355,14 @@ components:
       type: string
       minLength: 1
       description: 権限名
+    personId:
+      type: string
+      format: uuid
+      description: 人物ID
+    personName:
+      type: string
+      minLength: 1
+      description: 人物名
     refreshToken:
       type: string
       format: password
