# src/server/packages/Person/Domain/Models/PersonId.php
@@ -1,0 +1,11 @@
+<?php
+
+declare(strict_types=1);
+
+namespace Person\Domain\Models;
+
+use Support\Domain\ValueObjects\String\UuidValueObject;
+
+readonly class PersonId extends UuidValueObject
+{
+}
